# vanilla-steel-assessment

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt  run.py  top3.csv
data/: supplier_data2.xlsx:Zone.Identifier
outputs/: inventory_dataset.csv  rfq_clusters.csv  top3.csv  top3_adjusted_weights.csv  top3_all_features.csv  top3_baseline.csv  top3_categorical_only.csv  top3_dimensions_only.csv  top3_grade_only.csv  top3_hybrid.csv
src/: ablation_analysis.py  alternative_metrics.py  clustering.py  compare_ablation.py  data_cleaning.py  rfq_similarity.py
